Update hero image and add photo gallery
Replaced placeholder with actual drone image and added a photo gallery.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="hero-media">
         <!-- We’ll swap this to your drone photo once uploaded -->
-        <div class="photo-placeholder">Drone photo hero image goes here</div>
+        <img class="hero-img" src="assets/drone-1.jpg" alt="Shannon Lake Saskatchewan drone view near Wakaw Lake" />
       </div>
     </section>
 
@@ -67,7 +67,12 @@
 
       <div class="card">
         <h2>Photo gallery</h2>
-        <p class="muted">We’ll add 3–5 drone images here next.</p>
+      <div class="gallery">
+        <img src="assets/drone-2.jpg" alt="Shannon Lake lots overview" />
+        <img src="assets/drone-3.jpg" alt="Shannon Lake shoreline" />
+        <img src="assets/drone-4.jpg" alt="Shannon Lake Saskatchewan aerial photo" />
+</div>
+
       </div>
 
       <div class="card">
