--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
     <div class="card">
       <!-- We’ll replace the action URL with your Formspree endpoint in a later step -->
-      <form method="post" action="#">
+      <form method="post" action="https://formspree.io/f/xnjnkqzd">
         <label>
           Full Name
           <input name="name" autocomplete="name" required />
