--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,13 @@
     <h1>Request Information</h1>
     <p class="lead">
       Tell us what you’re interested in and we’ll send you availability and next steps.
-      Prefer email? <a href="mailto:Info@sunsetonshannon.com">Info@sunsetonshannon.com</a>
+      Prefer email? <a href="mailto:ljjansen6767@gmail.com">ljjansen6767@gmail.com</a>
     </p>
 
     <div class="card">
       <!-- We’ll replace the action URL with your Formspree endpoint in a later step -->
       <form method="post" action="https://formspree.io/f/xnjnkqzd">
+      <input type="hidden" name="_redirect" value="https://shannon-lake.pages.dev/thanks.html">
         <label>
           Full Name
           <input name="name" autocomplete="name" required />
