--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <h1>Request Information</h1>
   <p class="lead">
     Tell us what you’re interested in and we’ll send you availability and next steps.
-    Prefer email? <a href="mailto:Info@sunsetonshannon.com">Info@sunsetonshannon.com</a>
+    Prefer email? <a href="mailto:ljjansen6767@gmail.com">ljjansen6767.com</a>
   </p>
 
   <div class="card">
