--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
     >
       <!-- Redirect after successful submission -->
       <input type="hidden" name="_redirect" value="https://shannon-lake.pages.dev/thanks.html" />
+<input type="hidden" name="_next" value="https://shannon-lake.pages.dev/thanks.html" />
 
       <!-- Helpful email metadata -->
       <input type="hidden" name="_subject" value="New Shannon Lake Website Lead" />
