--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         </div>
 
         <ul class="trust">
+        <div class="mini-cta">
+          <p><strong>Interested?</strong> We’ll send current availability and next steps.</p>
+          <a class="btn" href="contact.html">Request Information</a>
+        </div>
           <li>Privately developed by a local Saskatchewan team</li>
           <li>5+ years in development</li>
           <li><strong>Less than 10 lakeside lots remaining</strong></li>
