--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         </div>
 
         <ul class="trust">
+          <li>Privately developed by a local Saskatchewan team</li>
+          <li>5+ years in development</li>
+          <li><strong>Less than 10 lakeside lots remaining</strong></li>
+        </ul>
+
         <div class="mini-cta">
           <p><strong>Interested?</strong> We’ll send current availability and next steps.</p>
           <a class="btn" href="contact.html">Request Information</a>
