--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
       <div class="card">
         <h2>Location</h2>
         <p class="muted">We’ll embed a map here once we confirm the best pin / coordinates.</p>
+        
+      <div class="sticky-cta" role="region" aria-label="Request information">
+        <a class="sticky-btn" href="contact.html">Request Information</a>
+        <a class="sticky-btn sticky-ghost" href="mailto:Info@sunsetonshannon.com">Email</a>
+      </div>
       </div>
     </section>
 
