--- a/lots.html
+++ b/lots.html
@@ -32,6 +32,11 @@
       <p class="muted">We’ll add lot map + “available / sold” indicators here next.</p>
       <a class="btn" href="contact.html">Request Information</a>
     </div>
+    
+      <div class="sticky-cta" role="region" aria-label="Request information">
+        <a class="sticky-btn" href="contact.html">Request Information</a>
+        <a class="sticky-btn sticky-ghost" href="mailto:Info@sunsetonshannon.com">Email</a>
+      </div>
 
     <footer class="footer">
       <p class="disclaimer">
