--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <div class="hero-content">
       <h1>
         Shannon Lake is a <em>Quiet, Private</em><br>
-        Lakeside Escape<br>
-        <span class="hero-subtitle">Near Saskatoon</span>
+        Lakeside Escape
       </h1>
+      <p class="hero-location">1 hour from Saskatoon, Saskatchewan</p>
       <div class="cta-row">
         <a class="btn btn-primary" href="contact.html">Request Information</a>
         <a class="btn btn-outline" href="lots.html">View Lots</a>
@@ -136,15 +136,33 @@
           <h2>Explore the <em>Property</em></h2>
         </div>
         <div class="gallery-grid">
-          <div class="gallery-item gallery-item-large">
+          <a href="lots.html" class="gallery-item gallery-item-large">
             <img src="assets/drone2.jpg" alt="Shannon Lake lots overview" />
-          </div>
-          <div class="gallery-item">
-            <img src="assets/drone3.jpg" alt="Shannon Lake shoreline" />
-          </div>
-          <div class="gallery-item">
+            <div class="gallery-label">
+              <span class="gallery-label-text">Lots for Sale</span>
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M5 12h14M12 5l7 7-7 7"/>
+              </svg>
+            </div>
+          </a>
+          <a href="rv-park.html" class="gallery-item">
+            <img src="assets/drone3.jpg" alt="Shannon Lake RV lots" />
+            <div class="gallery-label">
+              <span class="gallery-label-text">RV Lot Rental</span>
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M5 12h14M12 5l7 7-7 7"/>
+              </svg>
+            </div>
+          </a>
+          <a href="contact.html" class="gallery-item">
             <img src="assets/drone4.jpg" alt="Shannon Lake Saskatchewan aerial photo" />
-          </div>
+            <div class="gallery-label">
+              <span class="gallery-label-text">Request Info</span>
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M5 12h14M12 5l7 7-7 7"/>
+              </svg>
+            </div>
+          </a>
         </div>
       </div>
     </section>
@@ -156,13 +174,18 @@
           <div class="location-text">
             <h2>Find <em>Shannon Lake</em></h2>
             <p>Located about 1 hour east of Saskatoon via Highway 41, near Wakaw Lake. Easy to reach for a weekend getaway or extended stay.</p>
-            <a href="contact.html" class="btn btn-primary">Get Directions</a>
+            <a href="https://maps.app.goo.gl/d2k7UyfxhZKLBn7X8" target="_blank" rel="noopener" class="btn btn-primary">Get Directions</a>
           </div>
           <div class="location-map">
-            <div class="map-placeholder">
-              <p>Map coming soon</p>
-              <span class="map-coords">Near Wakaw Lake, SK</span>
-            </div>
+            <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2412.5076889871384!2d-105.57697932311092!3d52.58916677209498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53017603eb4e5ae9%3A0x9a2e8f8c2f8a9b0a!2sShannon%20Lake!5e0!3m2!1sen!2sca!4v1705600000000!5m2!1sen!2sca"
+              width="100%" 
+              height="100%" 
+              style="border:0;" 
+              allowfullscreen="" 
+              loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
           </div>
         </div>
       </div>
