--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Shannon Lake, Saskatchewan — a quiet, private lakeside escape about 1 hour east of Saskatoon via Highway 41, near Wakaw Lake. Lakeside lots and seasonal RV options. Request information today." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Cinzel:wght@400;500;600&family=Josefin+Sans:wght@300;400;500&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -21,7 +21,19 @@
     <!-- Navigation overlaid on hero -->
     <header class="site-header">
       <div class="header-inner">
-        <a class="brand" href="index.html">Shannon Lake</a>
+        <a class="brand" href="index.html">
+          <svg class="brand-icon" viewBox="0 0 52 52" fill="none">
+            <circle cx="26" cy="26" r="24" stroke="currentColor" stroke-width="1.5" fill="none"/>
+            <line x1="10" y1="28" x2="42" y2="28" stroke="currentColor" stroke-width="1" opacity="0.4"/>
+            <path d="M14 28 A12 12 0 0 1 38 28" stroke="#7dd3fc" stroke-width="2" fill="none"/>
+            <path d="M12 34 Q19 31, 26 34 T40 34" stroke="#7dd3fc" stroke-width="1.5" fill="none" opacity="0.7"/>
+            <path d="M14 38 Q21 35, 28 38 T42 38" stroke="#7dd3fc" stroke-width="1.5" fill="none" opacity="0.4"/>
+          </svg>
+          <span class="brand-wordmark">
+            <span class="brand-shannon">SHANNON</span>
+            <span class="brand-lake">LAKE</span>
+          </span>
+        </a>
         <nav class="nav">
           <a class="active" href="index.html">Home</a>
           <a href="lots.html">Lots for Sale</a>
@@ -178,7 +190,7 @@
           </div>
           <div class="location-map">
             <iframe 
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2412.5076889871384!2d-105.57697932311092!3d52.58916677209498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53017603eb4e5ae9%3A0x9a2e8f8c2f8a9b0a!2sShannon%20Lake!5e0!3m2!1sen!2sca!4v1705600000000!5m2!1sen!2sca"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d38719.06911148539!2d-105.43719071222085!3d52.66102844886936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5303b6e6f7c98b89%3A0x6c27a27d6bbd9420!2sSunset%20on%20Shannon!5e0!3m2!1sen!2sca!4v1768756321170!5m2!1sen!2sca"
               width="100%" 
               height="100%" 
               style="border:0;" 
@@ -209,10 +221,19 @@
     <footer class="footer">
       <div class="wrap">
         <div class="footer-content">
-          <div class="footer-brand">
-            <span class="brand">Shannon Lake</span>
-            <p class="footer-tagline">A private lakeside escape near Saskatoon</p>
-          </div>
+          <a class="footer-brand" href="index.html">
+            <svg class="brand-icon" viewBox="0 0 52 52" fill="none">
+              <circle cx="26" cy="26" r="24" stroke="currentColor" stroke-width="1.5" fill="none"/>
+              <line x1="10" y1="28" x2="42" y2="28" stroke="currentColor" stroke-width="1" opacity="0.4"/>
+              <path d="M14 28 A12 12 0 0 1 38 28" stroke="#7dd3fc" stroke-width="2" fill="none"/>
+              <path d="M12 34 Q19 31, 26 34 T40 34" stroke="#7dd3fc" stroke-width="1.5" fill="none" opacity="0.7"/>
+              <path d="M14 38 Q21 35, 28 38 T42 38" stroke="#7dd3fc" stroke-width="1.5" fill="none" opacity="0.4"/>
+            </svg>
+            <span class="brand-wordmark">
+              <span class="brand-shannon">SHANNON</span>
+              <span class="brand-lake">LAKE</span>
+            </span>
+          </a>
           <nav class="footer-nav">
             <a href="index.html">Home</a>
             <a href="lots.html">Lots for Sale</a>
